# SophonixQt

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
include/: atomix.h
middleware/AtomixCli/: CMakeLists.txt  atomixCli.cpp  atomixCli.h
middleware/AtomixCli/qml/: AtomixCli.qml
middleware/AtomixCli/qml/component/: CliBackCorner.qml  CliBackground.qml  CliInput.qml  CliOutput.qml  CliSurface.qml
middleware/AtomixParticle/: CMakeLists.txt  atomixParticle.cpp  atomixParticle.h
middleware/AtomixParticle/qml/: AtomixParticle.qml  CoreParticle.qml
middleware/AtomixParticle/resource/: resParticle.qrc
middleware/AtomixUi/: CMakeLists.txt  atomixUi.cpp  atomixUi.h
middleware/AtomixUi/include/: colorScheme.h  sizeScheme.h  uiDataType.h  uiGlobalData.h
middleware/AtomixUi/include/备份/: coreDataType.h
middleware/AtomixUi/qml/page/: UiWindow.qml
middleware/AtomixUi/resource/: resUi.qrc
middleware/AtomixUi/src/: colorScheme.cpp  sizeScheme.cpp  uiGlobalData.cpp
src/: atomix.cpp
